Removendo dados desnecessários no DTO.